syntax = "proto3";

package attrpubapi_v3;

import "Attribute.proto";

option java_package = "com.yoti.attrpubapi_v3";
option java_outer_classname = "AttrProto";


message AttributeSigning {
	string name = 1;

	bytes value = 2;

	ContentType content_type = 3;

	bytes artifact_signature = 4;

	string sub_type = 5;

	bytes signed_time_stamp = 6;
}
